*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,18 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (April 29, 2009, 5:48 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=246131">Bug 246131</a>. [ViewMgmt] PagePartSelectionTracker does not call setPart() for View opend in another Perspective (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270457">Bug 270457</a>. [Viewers] [regression] CheckBoxTreeViewer clears check state after collapseAll (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270769">Bug 270769</a>. [JFace] [perfs] 1 failure while running Platform/UI performance tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273047">Bug 273047</a>. [Themes] Colors and Fonts page needs polish (REOPENED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273489">Bug 273489</a>. [Mac] We should not nest sheets (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274075">Bug 274075</a>. [Progress] ProgressDialog should not use SWT.SHEET (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274290">Bug 274290</a>. [KeyBindings] KeysPreferenceModelTest.testUpdateKeySequence() fails on I20090428-0100 (NEW)<br>
+  </p>
+
 <p>Integration Build (April 29, 2009, 12:52 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
