--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (April 29, 2009, 6:17 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=236628">Bug 236628</a>. [Viewers] [JFace] Excessive Memory Usage by Project Explorer because of styles (NEW)<br>
+  </p>
+
 <p>Integration Build (April 29, 2009, 5:48 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
