--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (April 30, 2009, 1:29 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274480">Bug 274480</a>. I20090430-0100 broken due to AFEs (NEW)<br>
+  </p>
+
 <p>Integration Build (April 29, 2009, 6:17 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
