--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -102,10 +102,17 @@ value is no longer reliable.</p>
   <li>Constant addition: <code>IDebugUIConstants.PREF_DETAIL_PANE_FONT</code></li>
 </ul>
 </p>
-<p><strong>Description:</strong> Some clients needed to access preference settings for display attributes in the variables 
-view which were defined in an internal interface.  This change moves these constants to the <code>IDebugUIConstants</code> interface.  
-<p><strong>Action required:</strong> Clients which may have copied these constants or (gasp!) have referenced the internal interface, 
+<p><strong>Description:</strong> Some clients needed to access preference settings for display attributes in the variables
+view which were defined in an internal interface.  This change moves these constants to the <code>IDebugUIConstants</code> interface.
+<p><strong>Action required:</strong> Clients which may have copied these constants or (gasp!) have referenced the internal interface,
 should instead reference the new API constants.</p>
+
+<h2>May 8, 2009</h2>
+<h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262845">262845</a>: Bug 262845 &ndash; [breadcrumb] breadcrumb causes performance degradation in stepping<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=212798">212798</a>: Bug 212798 &ndash; Thread collapsed unexpectedly as threads are terminated<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=265376">265376</a>: Bug 265376 &ndash; [breadcrumb] Breadcrumb doesn't update layout after the view is resized.<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=274358">274358</a>: Bug 274358 &ndash; Show Thread Group option not propery updated in debug view<br>
 
 <h2>April 27, 2009</h2>
 <h3>Problem Reports Fixed</h3>
