updated build notes

--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -107,8 +107,9 @@ view which were defined in an internal interface.  This change moves these const
 <p><strong>Action required:</strong> Clients which may have copied these constants or (gasp!) have referenced the internal interface,
 should instead reference the new API constants.</p>
 
-<h2>May 8, 2009</h2>
+<h2>May 5, 2009</h2>
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=273498">Bug 273498</a>: Launch history generation could be more robust<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262845">262845</a>: Bug 262845 &ndash; [breadcrumb] breadcrumb causes performance degradation in stepping<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=212798">212798</a>: Bug 212798 &ndash; Thread collapsed unexpectedly as threads are terminated<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=265376">265376</a>: Bug 265376 &ndash; [breadcrumb] Breadcrumb doesn't update layout after the view is resized.<br>
