--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -110,10 +110,7 @@ should instead reference the new API constants.</p>
 <h2>May 5, 2009</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=273498">Bug 273498</a>: Launch history generation could be more robust<br>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262845">262845</a>: Bug 262845 &ndash; [breadcrumb] breadcrumb causes performance degradation in stepping<br>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=212798">212798</a>: Bug 212798 &ndash; Thread collapsed unexpectedly as threads are terminated<br>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=265376">265376</a>: Bug 265376 &ndash; [breadcrumb] Breadcrumb doesn't update layout after the view is resized.<br>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=274358">274358</a>: Bug 274358 &ndash; Show Thread Group option not propery updated in debug view<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=274358">Bug 274358</a>: Show Thread Group option not propery updated in debug view<br>
 
 <h2>April 27, 2009</h2>
 <h3>Problem Reports Fixed</h3>
@@ -128,6 +125,7 @@ should instead reference the new API constants.</p>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=268978">Bug 268978</a>: Build before launch should use one top level workspace runnable<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=233040">Bug 233040</a>: ConsoleTerminateAction performed in UI thread, occasionally lags<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=212798">Bug 212798</a>: Thread collapsed unexpectedly as threads are terminated<br>
 
 <h2>April 7, 2009</h2>
 <h3>Problem Reports Fixed</h3>
@@ -160,6 +158,8 @@ should instead reference the new API constants.</p>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=266162">Bug 266162</a>: Duplicates in prompt to save dirty resources before launching<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262849">Bug 262849</a>: [launching] Select Preferred Launcher dialog is somewhat confusing.<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=267438">Bug 267438</a>: IInernalDebugUIConstants.PREF_CHANGED_VALUE_BACKGROUND should be public.<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262845">Bug 262845</a>: [breadcrumb] breadcrumb causes performance degradation in stepping<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=265376">Bug 265376</a>: [breadcrumb] Breadcrumb doesn't update layout after the view is resized.<br>
 
 <h2>February 10, 2009</h2>
 <h3>Problem Reports Fixed</h3>
