Build submission for I20090504-2000

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,17 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (May 04, 2009, 6:06 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=232963">Bug 232963</a>. [Preferences] test for : Can't open PreferenceDialog with own PreferenceNodes (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270822">Bug 270822</a>. [Navigator] IPageLayout.ID_RES_NAV deprecated w/o an explanation (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271326">Bug 271326</a>. [BiDi] [Markers] BIDI3.5:HCG_Incorrect file path display  in Problems view (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273738">Bug 273738</a>. [EditorMgmt] [BiDi] BIDI3.5:HCG_Incorrect text orientation of "Path" column of list view on "Swithch To Editor" page. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274373">Bug 274373</a>. [Metadata] Some testing data folders not parametrized (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274699">Bug 274699</a>. [KeyBindings] Bug43597Test's testFontReset() leaks a font (FIXED)<br>
+  </p>
+
 <p>Integration Build (April 30, 2009, 1:29 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
