--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,17 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (May 05, 2009, 7:50 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=181836">Bug 181836</a>. [Commands] CommandContributionException should use the StatusManager (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=235802">Bug 235802</a>. [Markers] Marker testResourceMappings failure in I20080604-2000 on linux java 5.0 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267425">Bug 267425</a>. [Perspectives] problem with outline view and min/max (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274486">Bug 274486</a>. [PerspectiveBar] [Perspectives] Perspective Bar - Dock On Left throws IndexOutOfBoundsException (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274862">Bug 274862</a>. [Preferences] Cannot perform scrolling via keyboard in preference dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275075">Bug 275075</a>. junit test failure for testInputIfHiddenBug69953 (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 04, 2009, 6:06 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
