updated build notes

--- a/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
+++ b/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
@@ -19,6 +19,10 @@ Eclipse 3.5 Ant Build Notes</h1>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=274603">Bug 274603</a>: Unreachable strings<br>
 
+<h2>May 7, 2009</h2>
+<h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=274601">Bug 274601</a>: Problem with InternalAntRunner_Specifying_property_files_is_a_Ant_1_5___feature__Please_update_your_Ant_classpath__6<br>
+
 <h2>April 14, 2009</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=222615">Bug 222615</a>: Export Ant buildfile does not export JUnit4 style tests<br>
