Build submission for I20090506-2000

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (May 06, 2009, 6:06 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=99493">Bug 99493</a>. [Preferences] Colors and Fonts preference page opens extremely wide due to Java properties file compare text font (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=264152">Bug 264152</a>. [EditorMgmt] missing tooltips in editor dropdown (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275045">Bug 275045</a>. [Markers] Configure contents - inconsistent colon in labels (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 05, 2009, 7:50 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
