Build submission for I20090507-2000

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,16 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (May 07, 2009, 6:44 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=102885">Bug 102885</a>. [RCP] [PerspectiveBar] A large empty area on the top with a perspectivebar on the left (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=265157">Bug 265157</a>. [EditorMgmt] Ctrl+PageDown in editor area should select next editor also when menu is open (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=269079">Bug 269079</a>. [About] new dialogs tab order and keyboard accelerators (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=269210">Bug 269210</a>. [About] High Contrast mode: "Installation Details" dialog improperly sized for tab sizes (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275301">Bug 275301</a>. [Contributions] [Commands] NPE on startup if command id is not found (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 06, 2009, 6:06 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
