--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (May 08, 2009, 5:17 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=62838">Bug 62838</a>. lockup with no connection (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82370">Bug 82370</a>. Inline Policy.localize to enable NLS tooling (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275057">Bug 275057</a>. Make old ssh fragment optional (FIXED)<br>
+  </p>
+
 <p>Integration Build (April 29, 2009, 1:44 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
