The map file has been updated for the following Bug changes: + Bug 262557. [Edit] Save in Compare Editor throws OperationCanceledException (FIXED)
The following projects have changed:
org.eclipse.compare

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (May 11, 2009, 5:28 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262557">Bug 262557</a>. [Edit] Save in Compare Editor throws OperationCanceledException (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 08, 2009, 5:17 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
