--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -107,6 +107,10 @@ view which were defined in an internal interface.  This change moves these const
 <p><strong>Action required:</strong> Clients which may have copied these constants or (gasp!) have referenced the internal interface,
 should instead reference the new API constants.</p>
 
+<h2>May 11, 2009</h2>
+<h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=275614">Bug 275614</a>: REGRESSION: threads no longer expanded if Debug view not visible<br>
+
 <h2>May 8, 2009</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=273929">Bug 273929</a>: NPE in ToggleBreakpointObjectActionDelegate<br>
