Build submission for I20090511-2000

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,30 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (May 11, 2009, 6:27 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=116284">Bug 116284</a>. [RCP] Performance Tests Failing: RCP rcp.performance.EmptyWorkbenchPerfTest#testRestore() [close] (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=253002">Bug 253002</a>. [Contributions] CompoundContributionItem disposes old items on show (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262636">Bug 262636</a>. Hidden menu items are not updated on perspective switches (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267454">Bug 267454</a>. [EditorMgmt] Editor dirty state not synchronized after workbench restart (REOPENED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268533">Bug 268533</a>. [Viewers] Weird painting when using MOUSE_CLICK_ACTIVATION (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270465">Bug 270465</a>. [ErrorHandling] SafeRunnableDialog layout needs polish (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270795">Bug 270795</a>. [Contributions] [perfs] Regression on ObjectContributionsPerformance#testObjectContributions test (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271339">Bug 271339</a>. [FieldAssist] Add CC text field content assist doesn't work as expected when narrowing suggestions (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271744">Bug 271744</a>. [Viewers] [JFace] TreeViewer not closing CellEditors on Collapse (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272528">Bug 272528</a>. [WorkingSets] AIOOBE when trying to remove breakpoint  by doubleclick on nearby line (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273828">Bug 273828</a>. [Contributions] Regression (Widget is disposed) in CommandContributionItem (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274618">Bug 274618</a>. [EditorMgmt] StackOverflowError for an editor with a NullEditorInput (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275170">Bug 275170</a>. [ICU] Degradation comment for performance regression in CollatorPerformanceTest#testCollator (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275171">Bug 275171</a>. [Contributions] Customize Perspective action breaks editor pinning action (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275298">Bug 275298</a>. [About] IInstallationPageContainer and InstallationPage still claims to be experimental (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275301">Bug 275301</a>. [Contributions] [Commands] NPE on startup if command id is not found (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275509">Bug 275509</a>. [Viewers] Tree/TableViewer with cell navigation is not accessible (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275672">Bug 275672</a>. [Metadata] [ui] need the ability to patch ide and ide.application (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275678">Bug 275678</a>. [Dialogs][EditorMgmt] Revert usage of new openEditors API (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 07, 2009, 6:44 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
