*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (May 11, 2009, 7:45 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275197">Bug 275197</a>. [CommonNavigator] NullPointerException - Working set actions don't appear in CNF client (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275261">Bug 275261</a>. [Markers] Contents config dialog's 'Description' section should be renamed (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 11, 2009, 7:10 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
