Build submission for I20090512-2000

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,17 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (May 12, 2009, 6:17 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=217955">Bug 217955</a>. [WorkingSets] API to get the IWorkingSets that are part of an aggregating IWorkingSet (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272577">Bug 272577</a>. Make use of new SWT API: Shell.setModified() (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274631">Bug 274631</a>. [WorkingSets] Save/restore of aggregate workingset broken by changes from Bug 217955. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275716">Bug 275716</a>. [IDE] Local history preferences note doesn't match reality (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275809">Bug 275809</a>. [Markers] Can no longer toggle description in Problem view's contents configuration dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275929">Bug 275929</a>. [CommonNavigator] IPipelinedTreeContentProvider.getPipelinedElements() not ever called (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 11, 2009, 7:45 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
