Build submission for I20090513-2000

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (May 13, 2009, 5:53 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272307">Bug 272307</a>. [Mac] CocoaUIEnhancer crashes with NullPointer under Mac OS X Cocoa when running Riena example (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274260">Bug 274260</a>. Dialog to cancel history pruning on shutdown needs polish (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 12, 2009, 6:17 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
