The map file has been updated for the following Bug changes: + Bug 273046. Test and fix Save when compare editor and Java editor are open (FIXED) + Bug 276166. [Net] core.net extends wrong prefs extension point (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.core.net

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (May 14, 2009, 2:07 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273046">Bug 273046</a>. Test and fix Save when compare editor and Java editor are open (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=276166">Bug 276166</a>. [Net] core.net extends wrong prefs extension point (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 11, 2009, 5:28 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
