Build submission for I20090514-2000

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (May 14, 2009, 6:59 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=264804">Bug 264804</a>. [Contributions] extended popup menu item with <visibleWhen> attribute will disappear when right click multiple times. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274132">Bug 274132</a>. [FastView] Artifacts when starting workspace that has open fast view (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274260">Bug 274260</a>. Dialog to cancel history pruning on shutdown needs polish (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274981">Bug 274981</a>. [ErrorHandling] [StatusHandling] StatusDialog needs accessibility (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 13, 2009, 5:53 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
