Bug 276782  [Test] Update non automated tests for Eclipse 3.5

--- a/org.eclipse.ua.tests/non_junit/test_plan.htm
+++ b/org.eclipse.ua.tests/non_junit/test_plan.htm
@@ -356,7 +356,7 @@ p.MsoNormal
 
 <h1 style='background-attachment:scroll'>Testing Scenarios for User Assistance </h1>
 
-<p style='background-attachment:scroll'>Last updated 5/24/2007</p>
+<p style='background-attachment:scroll'>Last updated 5/18/2009</p>
 
 <h2 style='background-attachment:scroll'>About this Test Suite</h2>
 
@@ -393,7 +393,9 @@ causes the icons to show text describing them.</p>
 <p class=MsoListNumber2 style='tab-stops:.5in'><![if !supportLists]><span
 style='mso-fareast-font-family:"Times New Roman"'><span style='mso-list:Ignore'>3.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span></span></span><![endif]>Test
-clicking on each of the links in the root page.</p>
+clicking on each of the links in the root page. Verify that on each page visited the
+size of the text can be increased or decreased by clicking on the two buttons on the toolbar that
+looks like a letter 'A' with a small arrow next to it.</p>
 
 <p class=MsoListNumber2 style='tab-stops:.5in'><![if !supportLists]><span
 style='mso-fareast-font-family:"Times New Roman"'><span style='mso-list:Ignore'>4.<span
@@ -514,7 +516,7 @@ Click the customize button at the top of the Welcome view.</p>
 <p class=MsoListNumber2 style='tab-stops:.5in'><![if !supportLists]><span
 style='mso-fareast-font-family:"Times New Roman"'><span style='mso-list:Ignore'>2.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span></span></span><![endif]>Change
-the theme, verify that it works.</p>
+the theme, verify that it works. Make sure that you view every page of every theme.</p>
 
 <p class=MsoListNumber2 style='tab-stops:.5in'><![if !supportLists]><span
 style='mso-fareast-font-family:"Times New Roman"'><span style='mso-list:Ignore'>3.<span
