--- a/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
+++ b/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
@@ -17,6 +17,10 @@ Eclipse 3.5 Ant Build Notes</h1>
 
 <h2>May 5, 2009</h2>
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=275839">Bug 275839</a>: Eclipse Preferences Ant Runtime -- NPE -- (PDE Export fails)<br>
+
+<h2>May 5, 2009</h2>
+<h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=274603">Bug 274603</a>: Unreachable strings<br>
 
 <h2>May 7, 2009</h2>
