Build submission for I20090520-2000

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,16 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (May 20, 2009, 6:55 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274260">Bug 274260</a>. Dialog to cancel history pruning on shutdown needs polish (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275932">Bug 275932</a>. [CommonNavigator] Window close throws exception in ObservableCollectionTreeContentProvider (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=276520">Bug 276520</a>. [PropertiesView] [Views] Properties Views interfere with each other (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=276525">Bug 276525</a>. [Commands] Cascading menus clear before closing. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=277213">Bug 277213</a>. JFace does not run stand-alone (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 14, 2009, 6:59 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
