--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -163,6 +163,7 @@ should instead reference the new API constants.</p>
 
 <h2>March 24, 2009</h2>
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=236435">Bug 236435</a>: add 'do not ask again' option for 'remove all expressions'<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=270467">Bug 270467</a>: Enable to navigate to breakpoints<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=199288">Bug 199288</a>: Expressions view should support paste<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=269287">Bug 269287</a>: Content assist handler not disabled when the conditional breakpoint properties page is hidden<br>
