updated build notes

--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -199,6 +199,7 @@ should instead reference the new API constants.</p>
 
 <h2>February 10, 2009</h2>
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=263307">Bug 263307</a>: [launching] Preferred launch delegates preference should be more transparent<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=255722">Bug 255722</a>: IWorkspaceRoot.findContainersForLocation(IPath) is deprecated<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=208484">Bug 208484</a>: variables should be available for headless operation when possible<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=263881">Bug 263881</a>: SourceLookupFacility selects editor region when stack frame provides CharStart  value &gt; -1<br>
