updated build notes

--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -199,6 +199,8 @@ should instead reference the new API constants.</p>
 
 <h2>February 10, 2009</h2>
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262844">Bug 262844</a>: [launching] Launch tab group with no tabs leads to NPEs<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262848">Bug 262848</a>: [launching] If a tab is contributed and it does not have a placement specified, it should go in front.<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=263307">Bug 263307</a>: [launching] Preferred launch delegates preference should be more transparent<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=255722">Bug 255722</a>: IWorkspaceRoot.findContainersForLocation(IPath) is deprecated<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=208484">Bug 208484</a>: variables should be available for headless operation when possible<br>
