--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (maj 21, 2009, 11:49 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=277128">Bug 277128</a>. Help context for repository view filter dialog (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 14, 2009, 2:07 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
