The map file has been updated for the following Bug changes: + Bug 268321. [Net] UnixProxyProvider stuck on my RHEL5 gnome system (ASSIGNED)
The following projects have changed:
org.eclipse.core.net

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (maj 22, 2009, 4:10 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268321">Bug 268321</a>. [Net] UnixProxyProvider stuck on my RHEL5 gnome system (ASSIGNED)<br>
+  </p>
+
 <p>Integration Build (maj 21, 2009, 11:49 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
