Build submission for I20090525-2000

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (May 25, 2009, 5:51 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=65561">Bug 65561</a>. Doc Nit - Marker Resolution Extension Description (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=74337">Bug 74337</a>. FieldEditor should document that doFillIntoGrid() is called from the superclass constructor. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=276755">Bug 276755</a>. [DataBinding] Snippet to demonstrate data binding a ComboViewer to an enum (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=277306">Bug 277306</a>. [Metadata] Fix the copyright issues (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 20, 2009, 6:55 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
