Bug 277869: NPE copying empty list of variables https://bugs.eclipse.org/bugs/show_bug.cgi?id=277869

--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -107,6 +107,10 @@ view which were defined in an internal interface.  This change moves these const
 <p><strong>Action required:</strong> Clients which may have copied these constants or (gasp!) have referenced the internal interface,
 should instead reference the new API constants.</p>
 
+<h2>May 26, 2009</h2>
+<h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=277869">Bug 277869</a>: NPE copying empty list of variables<br>
+
 <h2>May 25, 2009</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=76481">Bug 76481</a>: [doc] In the doc for org.eclipse.debug.ui.AbstractLaunchConfigurationTab, setDirty is badly described<br>
