Build submission for I20090526-2000

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (May 26, 2009, 6:12 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=277306">Bug 277306</a>. [Metadata] Fix the copyright issues (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=277795">Bug 277795</a>. [DataBinding] 316 warnings in official build from org.eclipse.jface.examples.databinding (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 25, 2009, 5:51 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
