--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,11 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (maj 27, 2009, 12:19 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+  </p>
+
 <p>Integration Build (maj 22, 2009, 4:10 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
