Build submission for I20090527-2000

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (May 27, 2009, 6:49 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270797">Bug 270797</a>. [EditorMgmt] [perfs] Regression on all OpenMultipleEditorTest.* tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=277823">Bug 277823</a>. [DataBinding] API doc for 'org.eclipse.ui.databinding' is missing in Help (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278065">Bug 278065</a>. [GlobalActions] regression: command link to go to preference page broken (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 26, 2009, 6:12 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
