--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (May 28, 2009, 5:58 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=277966">Bug 277966</a>. [Databinding] regression: ObservablesManager throws NPE on dispose if one of the observables is already disposed (NEW)<br>
+  </p>
+
 <p>Integration Build (May 27, 2009, 6:49 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
