Build submission for I20090602-2000

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (June 02, 2009, 7:50 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275743">Bug 275743</a>. [About] [doc] Doc Only - installationPages schema file has extra colon (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278514">Bug 278514</a>. [WorkbenchParts] NPE in PageBookView.containsPart (FIXED)<br>
+  </p>
+
 <p>Integration Build (May 28, 2009, 5:58 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
