--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (June 03, 2009, 5:00 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278829">Bug 278829</a>. [About] [doc] Mark IInstallationPageContainer as @noimplement (FIXED)<br>
+  </p>
+
 <p>Integration Build (June 02, 2009, 7:50 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
