--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (June 04, 2009, 5:59 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278550">Bug 278550</a>. [Databinding] ObservablesManager, ObservableTracker and MapSimpleValueObservableMap lead to exception (NEW)<br>
+  </p>
+
 <p>Integration Build (June 03, 2009, 5:48 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
